--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
-    "build": "tsc"
+    "build": "peggy --format es -o dist/parser.mjs src/expr.pegjs && tsc"
   },
   "devDependencies": {
+    "peggy": "^5.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
